--- a/httpclient/pom.xml
+++ b/httpclient/pom.xml
@@ -7,7 +7,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>httpclient</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>httpclient Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <dependencies>
