--- a/corejava/pom.xml
+++ b/corejava/pom.xml
@@ -7,7 +7,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>corejava</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
     <name>core java test</name>
     <url>http://roytrack.com</url>
 
@@ -99,7 +99,6 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -139,6 +138,10 @@
                     <artifactId>commons-logging</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.uuid</groupId>
+            <artifactId>java-uuid-generator</artifactId>
         </dependency>
         <dependency>
             <groupId>javax.mail</groupId>
