--- a/pom.xml
+++ b/pom.xml
@@ -346,6 +346,11 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+            <dependency>
+                <groupId>com.fasterxml.uuid</groupId>
+                <artifactId>java-uuid-generator</artifactId>
+                <version>3.1.4</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
