--- a/netty/pom.xml
+++ b/netty/pom.xml
@@ -22,6 +22,11 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.1.0</version>
+        </dependency>
 
     </dependencies>
 
