--- a/netty/pom.xml
+++ b/netty/pom.xml
@@ -28,6 +28,17 @@
             <version>3.1.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jboss.marshalling</groupId>
+            <artifactId>jboss-marshalling-serial</artifactId>
+            <version>1.4.11.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.marshalling</groupId>
+            <artifactId>jboss-marshalling</artifactId>
+            <version>1.4.11.Final</version>
+        </dependency>
+
     </dependencies>
 
 
