--- a/netty/pom.xml
+++ b/netty/pom.xml
@@ -15,7 +15,7 @@
     <dependencies>
         <dependency>
             <groupId>io.netty</groupId>
-            <artifactId>netty-parent</artifactId>
+            <artifactId>netty-all</artifactId>
             <version>4.1.9.Final</version>
         </dependency>
         <dependency>
