--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,22 @@
         <url>https://github.com/roytrack/sample</url>
     </scm>
 
+    <repositories>
+        <repository>
+            <id>aliyun</id>
+            <name>aliyun</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+        </repository>
+    </repositories>
+
     <modules>
         <module>corejava</module>
         <module>mavenInAction</module>
@@ -43,7 +59,6 @@
         <module>redis</module>
         <module>elasticsearch</module>
         <module>disruptor</module>
-        <module>log</module>
     </modules>
     <properties>
         <spring.version>4.1.4.RELEASE</spring.version>
