--- a/mq/pom.xml
+++ b/mq/pom.xml
@@ -7,7 +7,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>mq</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>mq Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <dependencies>
